--- a/index.css
+++ b/index.css
@@ -65,6 +65,7 @@ main {
   color: rgba(39, 33, 66, 0.4);
   line-height: 24px;
   font-weight: 500;
+  width: 300px;
 }
 
 .weather-app-temperature-container {
